--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title what is
+    title dao
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -57,5 +57,6 @@ template(name='layout')
 
 template(name='not_found')
     .ui.basic.center.aligned.segment
+        .ui.header page not found
         a(href="/discrete")
             i.massive.yin.yang.link.icon
