--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -14,13 +14,13 @@ template(name='profile_layout')
                         span.mobile.hidden
                             a(href="/u/#{username}/")
                                 img.ui.centered.fluid.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
-                        a.ui.large.header.refresh_user_stats(href="/u/#{username}") 
+                        a.ui.header.refresh_user_stats(href="/u/#{username}") 
                             |#{name}
                         // div
                         a.ui.small.header.refresh_user_stats(href="/u/#{username}") 
                             |@#{username}
                         if is_admin
-                            a.ui.large.circular.basic.button(href="/u/#{username}/edit" title='admin edit account')
+                            a.ui.circular.basic.button(href="/u/#{username}/edit" title='admin edit account')
                                 i.shield.large.icon
                                 |account
                         if is_current_user
@@ -32,8 +32,8 @@ template(name='profile_layout')
                                 |log out
                         // .ui.inline.header() #{points}pts
                         .ui.basic.circular.label {{to_percent one_ratio}}% one ratio
-                        .ui.large.basic.circular.label #{flow_volume} volume
-                        //- .ui.compact.icon.button.refresh_user_stats(title='refresh stats')
+                        .ui.basic.circular.label #{flow_volume} volume
+                        //- .ui.icon.button.refresh_user_stats(title='refresh stats')
                         //-     i.refresh.icon
                         if is_current_user
                             +boolean_edit key='online' label='online' direct=true
@@ -57,11 +57,11 @@ template(name='profile_layout')
                             if currentUser
                                 // div
                                 +user_friend_button 
-                        a.ui.large.icon.button(href="/u/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
+                        a.ui.icon.button(href="/u/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
                             i.dashboard.large.icon
                             // |dashboard
                         if is_current_user
-                            a.ui.large.icon.button(href="/u/#{username}/edit/membership" class="{{isActiveRoute 'user_finance'}}")
+                            a.ui.icon.button(href="/u/#{username}/edit/membership" class="{{isActiveRoute 'user_finance'}}")
                                 i.money.large.icon
                         unless is_current_user
                             .ui.basic.circular.button.tip(title='send tip')
@@ -81,43 +81,43 @@ template(name='profile_layout')
                             // .ui.disabled.basic.circular.button(title='request points')
                             //     i.concierge.bell.teal.icon
                             //     span request
-                        a.ui.large.compact.basic.circular.button(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
+                        a.ui.basic.circular.button(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
                             i.chat.large.blue.icon
                             | message
         
         
                     .twelve.wide.column
-                        a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
                             i.large.dashboard.icon
                             span dashboard
-                        a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/about" class="{{isActiveRoute 'user_about'}}" title="#{user.username} info")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/about" class="{{isActiveRoute 'user_about'}}" title="#{user.username} info")
                             i.info.large.icon
                             span about
-                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
                             i.large.chevron.down.icon
                             span pts received
-                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
                             i.large.gift.icon
                             span pts sent
-                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
                             i.large.dollar.icon
-                            // span credit
-                        a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/events" class="{{isActiveRoute 'user_events'}}" title="#{user.username} events")
+                            span credit
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/events" class="{{isActiveRoute 'user_events'}}" title="#{user.username} events")
                             i.calendar.large.icon
                             span events
-                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
                             i.large.concierge.bell.icon
                             span requests
-                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
                             i.large.hand.holding.heart.icon
                             span offers
-                        a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
+                        a.ui.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
                             i.chat.large.icon
                             span chat
-                        a.ui.large.compact.basic.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
+                        a.ui.basic.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
                             i.certificate.large.icon
                             span.mobile.hidden badges
-                        a.ui.large.compact.basic.circular.compact.button(href="/u/#{username}/food" class="{{isActiveRoute 'user_genekeys'}}" title="#{user.username} genekeys")
+                        a.ui.basic.circular.button(href="/u/#{username}/food" class="{{isActiveRoute 'user_genekeys'}}" title="#{user.username} genekeys")
                             i.large.food.icon
                             span food
                         // .spacer
@@ -138,5 +138,5 @@ template(name='user_friend_button')
         .ui.blue.large.icon.button.unfriend(title='unfriend')
             i.checkmark.large.icon
     else
-        .ui.large.icon.button.friend(title='friend')
+        .ui.icon.button.friend(title='friend')
             i.user.plus.large.icon
