--- a/parts/user_edit/user_edit.jade
+++ b/parts/user_edit/user_edit.jade
@@ -8,35 +8,35 @@ template(name='user_edit_layout')
                 .ui.stackable.padded.grid
                     .row
                         .four.wide.column
-                            .ui.center.aligned.large.inline.header(style="color:#{current_user.theme_color};")
+                            .ui.center.aligned.inline.header(style="color:#{current_user.theme_color};")
                                 i.big.cog.icon(style="color:#{current_user.theme_color};")
                                 | #{current_user.name}
                             .ui.small.inline.header @#{current_user.username}
                             img.ui.centered.medium.rounded.image(src="{{c.url profile_image_id height=400 width=400 gravity='face' crop='fill'}}")
                                 
-                            a.ui.big.green.circular.button(href="/u/#{current_user.username}/") 
+                            a.ui.green.circular.button(href="/u/#{current_user.username}/") 
                                 i.checkmark.big.icon
                                 strong save
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/account" class="{{isActiveRoute 'user_edit_account'}}" title='account') 
-                                i.cog.large.icon 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/account" class="{{isActiveRoute 'user_edit_account'}}" title='account') 
+                                i.cog.icon 
                                 |account
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/info" class="{{isActiveRoute 'user_edit_info'}}" title='info') 
-                                i.info.large.icon 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/info" class="{{isActiveRoute 'user_edit_info'}}" title='info') 
+                                i.info.icon 
                                 |info
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/alerts" class="{{isActiveRoute 'user_edit_alerts'}}") 
-                                i.bell.large.icon 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/alerts" class="{{isActiveRoute 'user_edit_alerts'}}") 
+                                i.bell.icon 
                                 |alerts
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/food" class="{{isActiveRoute 'user_edit_food'}}") 
-                                i.food.large.icon 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/food" class="{{isActiveRoute 'user_edit_food'}}") 
+                                i.food.icon 
                                 |food
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/privacy" class="{{isActiveRoute 'user_edit_privacy'}}") 
-                                i.lock.privacy.large.icon 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/privacy" class="{{isActiveRoute 'user_edit_privacy'}}") 
+                                i.lock.privacy.icon 
                                 | privacy
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/badges" class="{{isActiveRoute 'user_edit_badges'}}" title='badges') 
-                                i.certificate.large.icon
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/badges" class="{{isActiveRoute 'user_edit_badges'}}" title='badges') 
+                                i.certificate.icon
                                 |badges
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/membership" class="{{isActiveRoute 'user_edit_membership'}}" title='membership') 
-                                i.shield.large.icon
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/membership" class="{{isActiveRoute 'user_edit_membership'}}" title='membership') 
+                                i.shield.icon
                                 | membership
                         .twelve.wide.column
                             +yield
@@ -79,7 +79,7 @@ template(name='password_edit')
     if is_admin
         .ui.fluid.button.reset_password
             |reset password
-    .ui.fluid.large.button.set_password
+    .ui.fluid.button.set_password
         i.lock.icon
         //- +i name='password' cl='ui mini inline image'
         | set password
@@ -90,7 +90,7 @@ template(name='emails_edit')
     //- .ui.small.header 
     //-     i.envelope.icon
     //-     | email(s)
-    //- #test_email.ui.large.button test email
+    //- #test_email.ui.button test email
     .ui.divided.list
         each current_user.emails
             .item 
@@ -99,11 +99,11 @@ template(name='emails_edit')
                 //         .ui.button Verify
                 .content
                     if verified
-                        .ui.large.green.label(title='verified')
+                        .ui.green.label(title='verified')
                             | #{address}
                             i.checkmark.icon
                     else
-                        .ui.large.orange.label(title='unverified')
+                        .ui.orange.label(title='unverified')
                             i.question.icon
                             | #{address}
                         .send_verification_email.ui.button 
@@ -111,7 +111,7 @@ template(name='emails_edit')
                             i.caret.right.icon
                     .ui.small.icon.basic.button.remove_email
                         i.remove.icon
-    .ui.action.large.fluid.action.input
+    .ui.action.fluid.action.input
         input#new_email(type='email' placeholder='add new address' autocomplete="off")
         #add_email.ui.submit.compact.button 
             i.plus.icon
