--- a/parts/user_edit/user_edit_info.jade
+++ b/parts/user_edit/user_edit_info.jade
@@ -20,17 +20,11 @@ template(name='user_edit_info')
             .spacer
             +link_edit key='website' label='website' icon='link' direct=true
             .spacer
-            +textarea_edit key='profile_excites_blurb' label='What excites you about being apart of this community?' direct=true
-            .spacer
-            +textarea_edit key='profile_community_blurb' label='What do you want this community to know about you?' direct=true
-            .spacer
-            +textarea_edit key='profile_contribute_blurb' label='What would you like to contribute (think: superpowers, talents, gifts, resources)' direct=true
-            .spacer
-            +textarea_edit key='profile_hope_receive' label='What do you hope to receive?' direct=true
+            +textarea_edit key='bio' label='bio' direct=true
             .spacer
             .ui.divider
             // +array_edit key='pet_peeves' label='pet peeves' icon='annoyance' direct=true
             .spacer
-            +textarea_edit key='emergency_contact_name' label='emergency contact name' icon='alert' direct=true
+            +text_edit key='emergency_contact_name' label='emergency contact name' icon='alert' direct=true
             .spacer
-            +textarea_edit key='emergency_contact_number' label='emergency contact number' icon='alert' direct=true
+            +text_edit key='emergency_contact_number' label='emergency contact number' icon='alert' direct=true
