--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,20 +1,20 @@
 template(name='nav')
-    .ui.fluid.attached.large.borderless.eleven.item.inverted.menu.hscroll
+    .ui.fluid.attached.borderless.inverted.menu.hscroll
         a.icon.item.toggle_sidebar
             i.large.bars.icon
         a.icon.item(href="/" class="{{isActiveRoute 'home'}}") 
             i.heart.large.icon
             // |home
-        a.icon.item(href="/tarot" class="{{isActivePath '/tarot'}}") 
+        a.icon.item.mobile.hidden(href="/tarot" class="{{isActivePath '/tarot'}}") 
             i.moon.large.icon
             // |tarot
-        a.icon.item(href="/food_nav" class="{{isActivePath '/food_nav'}}") 
+        a.icon.item.mobile.hidden(href="/food_nav" class="{{isActivePath '/food_nav'}}") 
             i.food.large.icon
             // |food
-        a.icon.item(href="/r/love" class="{{isActivePath '/r/love'}}") 
+        a.icon.item.mobile.hidden(href="/r/love" class="{{isActivePath '/r/love'}}") 
             i.university.large.icon
             // |bank
-        a.icon.item(href="/users" class="{{isActivePath '/users'}}") 
+        a.icon.item.mobile.hidden(href="/users" class="{{isActivePath '/users'}}") 
             i.users.large.icon
             // |bank
         // .icon.item 
@@ -51,13 +51,11 @@ template(name='nav')
             i.ellipsis.vertical.large.icon
         unless currentUser
             a.item(href="/register" title='register')
+                i.large.plus.icon
                 |register
-                +icon name='plus'
-                // i.large.chevron.right.icon
             a.item(href="/login" title='login')
                 |login
-                +icon name='login-rounded-right'
-                // i.large.chevron.right.icon
+                i.large.chevron.right.icon
     if session_is 'viewing_alerts'
         +topbar
 
@@ -139,30 +137,30 @@ template(name='right_sidebar')
         a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
             | offers
             i.large.hand.holding.heart.icon
-        // a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
-        //     | chat
-        //     i.chat.icon
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
+            | chat
+            i.chat.icon
         .ui.divider
         a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
             i.cog.large.icon
             |settings
-        // a.item.toggle_nightmode.toggle_rightbar(href="#")
-        //     i.lightbulb.large.icon
-        //     |dark mode
+        a.item.toggle_nightmode.toggle_rightbar(href="#")
+            i.lightbulb.large.icon
+            |dark mode
         a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
             |logout
             if is_logging_out
-                i.refresh.loading.icon
+                i.refresh.loading.large.icon
             else
-                i.sign.out.icon
+                i.sign.out.large.icon
 
 
 
 template(name='left_sidebar')
     .ui.left.sidebar.vertical.borderless.inverted.menu
-        // a.item.toggle_sidebar(href="/" class="{{isActiveRoute '/'}}")
-        //     img.ui.avatar.compact.image(src="{{c.url 'one_logo' height=200 width=200 gravity='face' crop='fill'}}")
-        //     |One
+        a.item.toggle_sidebar(href="/" class="{{isActiveRoute '/'}}")
+            i.large.yin.yang.icon
+            |dao
         a.item.set_member.toggle_sidebar(href="/m/member" class="{{isActivePath 'm/member'}}" title='players')
             i.large.users.icon
             | directory
@@ -178,9 +176,9 @@ template(name='left_sidebar')
         a.item.toggle_sidebar.set_post(href="/m/post" class="{{isActivePath '/m/post'}}")
             i.large.newspaper.icon
             |news
-        // a.item.toggle_sidebar(href="/m/collective" class="{{isActivePath 'requests'}}")
-        //     i.users.icon
-        //     |collectives
+        a.item.toggle_sidebar(href="/m/tribes" class="{{isActivePath 'tribess'}}")
+            i.fire.large.icon
+            |tribes
         a.item.toggle_sidebar.set_bug(href="/m/bug" class="{{isActivePath '/m/bug'}}")
             i.large.bug.icon
             |bugs
@@ -190,20 +188,20 @@ template(name='left_sidebar')
         a.icon.item.toggle_sidebar.set_expense(href="/m/expense" class="{{isActivePath '/m/expense'}}" title='expenses')
             i.large.dollar.icon
             |expenses            
-        // a.item.toggle_sidebar.set_rental(href="/m/rental" class="{{isActivePath regex='rentals'}}")
-        //     i.clock.icon
-        //     |rentals
+        a.item.toggle_sidebar.set_rental(href="/m/rental" class="{{isActivePath regex='rentals'}}")
+            i.clock.large.icon
+            |rentals
         // if has_badge 'facilitator'
-        // a.item.toggle_sidebar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
-        //     |chat
-        //     i.large.chat.icon
-        // if is_eric
-        //     a.icon.item.toggle_dev.toggle_sidebar
-        //         |toggle dev
-        //         if is_dev
-        //             i.code.blue.large.icon
-        //         else
-        //             i.code.large.icon
+        a.item.toggle_sidebar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+            |chat
+            i.large.chat.icon
+        if is_eric
+            a.icon.item.toggle_dev.toggle_sidebar
+                |toggle dev
+                if is_dev
+                    i.code.blue.large.icon
+                else
+                    i.code.large.icon
         if is_in_admin
             a.icon.item.toggle_admin.toggle_sidebar
                 |toggle admin
@@ -213,19 +211,19 @@ template(name='left_sidebar')
                     i.shield.large.icon
             
         if is_admin
-            // a.item.toggle_sidebar.set_badge(href="/m/badge" class="{{isActivePath 'badges'}}")
-            //     i.certificate.blue.icon
-            //     | badges
-            // a.item.toggle_sidebar.set_debit(href="/m/debit" class="{{isActivePath regex='rentals'}}")
-            //     i.gift.blue.icon
-            //     |gifts
+            a.item.toggle_sidebar.set_badge(href="/m/badge" class="{{isActivePath 'badges'}}")
+                i.certificate.blue.icon
+                | badges
+            a.item.toggle_sidebar.set_debit(href="/m/debit" class="{{isActivePath regex='rentals'}}")
+                i.gift.blue.icon
+                |gifts
             .divider
-            // a.item.toggle_sidebar.set_project(href="/m/project" class="{{isActivePath regex='projects'}}")
-            //     i.tasks.blue.icon
-            //     | projects
-            // a.item.toggle_sidebar(href="/m/room" class="{{isActiveRoute 'requests'}}")
-            //     i.building.blue.icon
-            //     |rooms
+            a.item.toggle_sidebar.set_project(href="/m/project" class="{{isActivePath regex='projects'}}")
+                i.tasks.blue.icon
+                | projects
+            a.item.toggle_sidebar(href="/m/room" class="{{isActiveRoute 'requests'}}")
+                i.building.blue.icon
+                |rooms
             a.blue.item.set_model.toggle_sidebar(href="/m/model" class="{{isActivePath '/m/model'}}")
                 |admin
                 i.database.blue.icon
