--- a/client/s.css
+++ b/client/s.css
@@ -683,7 +683,7 @@ input {
     /*margin-top: 1em; */
     /*padding-top: .5em; */
     /*padding: .4em;*/
-    /*padding-left: 1em;*/
+    padding-left: 1em;
 }
 .forty {
     max-height:38vh !important;
@@ -707,7 +707,7 @@ input {
 } 
 
 
-.button,.card,.image,.header,.label,p,img,.say,.pointer{
+.button,.card,.image,.header,p,img,.say,.pointer{
     animation: fadein .15s !important;
     -webkit-transition: opacity .35s ease-in !important;
     -webkit-transition: opacity .35s ease-out; 
