--- a/client/sub.jade
+++ b/client/sub.jade
@@ -1,7 +1,7 @@
 template(name='subreddit')
     unless current_subreddit
         .ui.center.aligned.basic.segment
-            i.massive.yin.yang.link.grey.icon.get_info.shadowed2
+            i.massive.yin.yang.link.grey.loading.icon.get_info.shadowed2
     with current_subreddit
         .ui.stackable.grid(style="background-image:url(#{data.banner_img}); margin-top:0px;, background-size:cover;, background-repeat: no-repeat; min-width: 100%; ")
             .twelve.wide.column.seg
@@ -22,10 +22,14 @@ template(name='subreddit')
                 .ui.icon.input
                     i.search.icon
                     input.search_subreddit(type='text')
-                each subreddit_result_tags
-                    // .ui.label #{this}
-                    +sub_tag_selector
-                    // .ui.large.label(title=count) #{name}
+                if subreddit_result_tags.count
+                    each subreddit_result_tags
+                        // .ui.label #{this}
+                        +sub_tag_selector
+                        // .ui.large.label(title=count) #{name}
+                else
+                    .ui.center.aligned.basic.segment
+                        i.big.grey.loading.yin.yang.icon
                 div
                 .ui.inline.header #{post_count}
                 if skv_is 'sort_direction' 1
@@ -83,7 +87,7 @@ template(name='subreddit')
                     .ui.icon.compact.circular.basic.button.set_list(class=list_class)
                         i.list.large.icon
                 .scrolling
-                    if sub_docs
+                    if sub_docs.count
                         if skv_is 'subreddit_view_layout' 'grid'
                             .ui.stackable.three.column.grid 
                                 each sub_docs
@@ -92,8 +96,8 @@ template(name='subreddit')
                             each sub_docs
                                 +subreddit_doc_item
                     else
-                        .ui.center.aligned.segment
-                            i.big.loading.yin.yang.icon
+                        .ui.center.aligned.basic.segment
+                            i.massive.grey.loading.yin.yang.icon
             .four.wide.column.scrolling.seg
                 // img.ui.inline.image(src=data.header_img)
                 // .ui.inline.header.pull_latest #{data.title}
