--- a/client/s.css
+++ b/client/s.css
@@ -619,7 +619,7 @@ a.title, #title {
 
 input {
     /*margin: 10px !important;*/
-    /*border-radius: 15px !important; */
+    border-radius: 15px !important; 
 }
 
 ::-webkit-scrollbar {
