sub ,ruser, dashboard, text_edit with user, nickname on profile, user helpers

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.inverted.menu.hscroll
+    .ui.fluid.attached.borderless.inverted.eleven.item.menu.hscroll
         a.icon.item.toggle_sidebar
             i.large.bars.icon
         a.icon.item(href="/" class="{{isActiveRoute 'home'}}") 
