--- a/parts/user_edit/user_edit.jade
+++ b/parts/user_edit/user_edit.jade
@@ -138,6 +138,7 @@ template(name='user_edit_account')
             +image_edit key='avatar_image_id' icon='picture' title='avatar image' direct=true
             +password_edit
         .column
+            +text_edit key='nickname' label='display name' direct=true
             +text_edit key='first_name' label='first name' direct=true
             +text_edit key='last_name' label='last name' direct=true
             .ui.header 
