add stripe, working single-User ref field, add referral to membership

--- a/parts/profile/user_dashboard.jade
+++ b/parts/profile/user_dashboard.jade
@@ -1,6 +1,6 @@
 template(name='user_dashboard')
     .ui.stackable.grid
-        .row
+        .three.column.row
             .column
                 .ui.header social graph
                 each child_users
