--- a/parts/user_edit/user_edit_membership.jade
+++ b/parts/user_edit/user_edit_membership.jade
@@ -4,11 +4,11 @@ template(name='user_edit_membership')
             .sixteen.wide.column
                 .ui.header
                     i.id.badge.outline.icon
-                    | riverside membership
+                    | dao membership
         .row 
             .sixteen.wide.column
-                .ui.big.green.button.pay_membership
-                    |pay $250 for membership
+                .ui.green.button.pay_membership
+                    |pay $10 for membership
                 each transactions
                     .ui.segment
                         a.ui.header(href="/transaction/#{_id}/view") #{when}
@@ -21,6 +21,7 @@ template(name='user_edit_membership')
                             +remove_button
                             +print_this
                 // +user_edit_finance
+                +single_user_edit key='referrer' label='refered by' direct=true
                 if is_admin
                     .ui.header
                         i.shield.icon
