user helpers more,

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -211,9 +211,11 @@ template(name='link_view')
         a.ui.header(href=field_value target='_window')
             if label 
                 |#{label}
-        a(href=field_value target='_window')
+        a(href="www.#{field_value}" target='_window')
             |#{field_value}
         //- img.ui.fluid.image(src=field_value)
+        
+        
 template(name='image_view')
     if field_value
         //- .ui.inline.header
