--- a/parts/finance/debit_view.jade
+++ b/parts/finance/debit_view.jade
@@ -4,8 +4,8 @@ template(name='debit_view')
             .centered.row 
                 .five.wide.column
                     a(href="/u/#{_author.username}") 
-                        img.ui.circular.centered.pointer.zoom.image(src="{{c.url _author.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                        .ui.large.center.aligned.header.pointer.zoom
+                        img.ui.circular.centered.pointer.zoomer.image(src="{{c.url _author.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                        .ui.large.center.aligned.header.pointer.zoomer
                             |#{_author.name}
                 .five.wide.column
                     .ui.huge.center.aligned.header
@@ -31,8 +31,8 @@ template(name='debit_view')
                     //- +array_view key='location_tags' label='location_tags' direct=true
                 .five.wide.column
                     a(href="/u/#{recipient.username}")
-                        img.ui.circular.centered.fluid.pointer.zoom.image(src="{{c.url recipient.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                        .ui.large.center.aligned.header.pointer.zoom
+                        img.ui.circular.centered.fluid.pointer.zoomer.image(src="{{c.url recipient.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                        .ui.large.center.aligned.header.pointer.zoomer
                             |#{recipient.name}
                             
 
