--- a/parts/user_edit/user_edit_membership.jade
+++ b/parts/user_edit/user_edit_membership.jade
@@ -21,7 +21,7 @@ template(name='user_edit_membership')
                             +remove_button
                             +print_this
                 // +user_edit_finance
-                +single_user_edit key='referrer' label='refered by' direct=true
+                +single_user_edit key='referrer' label='referred by' direct=true
                 if is_admin
                     .ui.header
                         i.shield.icon
