--- a/parts/account/register.jade
+++ b/parts/account/register.jade
@@ -10,7 +10,7 @@ template(name='register')
                     // div
                     // +icon name='circled' cl='ui inline image'
                     i.big.yin.yang.icon
-                    .ui.big.inline.header registration
+                    .ui.big.inline.header register
                 //- if message
                 //-     h4.ui.center.aligned.header #{message}
                 // .ui.small.inline.header 
@@ -19,19 +19,19 @@ template(name='register')
                 //     input.first_name(type='text')
                 // .ui.small.inline.header 
                 //     |last name
-                .ui.fluid.input(class=login_class)
-                    input.last_name(type='text')
-                .ui.small.inline.header 
-                    i.mail.icon
-                    |email
-                .ui.fluid.icon.input(class=login_class)
-                    //- if email_valid
-                    if email_valid
-                        i.checkmark.large.green.icon
-                    else
-                        i.ban.orange.large.icon
-                    input.email_field(type='email')
-                .ui.small.inline.header 
+                // .ui.fluid.input(class=login_class)
+                //     input.last_name(type='text')
+                // .ui.small.inline.header 
+                //     i.mail.icon
+                //     |email
+                // .ui.fluid.icon.input(class=login_class)
+                //     //- if email_valid
+                //     if email_valid
+                //         i.checkmark.large.green.icon
+                //     else
+                //         i.ban.orange.large.icon
+                //     input.email_field(type='email')
+                .ui.header 
                     i.user.outline.icon
                     |username
                 .ui.fluid.icon.input(class=login_class)
@@ -48,7 +48,7 @@ template(name='register')
                 //     else
                 //         i.ban.icon
                 //     input.email(type='text')
-                .ui.small.inline.header 
+                .ui.header 
                     i.lock.grey.icon
                     // +icon name='password'
                     | password
@@ -59,9 +59,10 @@ template(name='register')
                 //-         i.lock.grey.icon
                 //-         | password again
                 //-     input.password2(type='password')
+                .ui.hidden.divider
                 if can_register
                     //- if registering
-                    .ui.fluid.big.button.register(class=enter_class)
+                    .ui.fluid.big.circular.basic.button.register(class=enter_class)
                         i.user.plus.icon
                         |register
                 else
