--- a/client/nav.jade
+++ b/client/nav.jade
@@ -35,17 +35,18 @@ template(name='nav')
         if is_dev 
             .icon.item
                 i.large.code.icon
-        a.mobile.hidden.item(href="/u/#{currentUser.username}/points" class="{{isActiveRoute 'user_credits'}}")
-            |#{currentUser.points}p
-        a.large.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
-            if currentUser.profile_image_id
-                if is_admin
-                    i.large.shield.icon(title='admin mode on')
-                else
-                    img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-            else 
-                i.large.user.large.icon
-            strong.mobile.hidden #{currentUser.name}
+        if currentUser
+            a.mobile.hidden.item(href="/u/#{currentUser.username}/points" class="{{isActiveRoute 'user_credits'}}")
+                |#{currentUser.points}p
+            a.large.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
+                if currentUser.profile_image_id
+                    if is_admin
+                        i.large.shield.icon(title='admin mode on')
+                    else
+                        img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                else 
+                    i.large.user.large.icon
+                strong.mobile.hidden #{currentUser.name}
         a.icon.large.item.toggle_rightbar.select_term
             i.ellipsis.vertical.large.icon
         unless currentUser
