--- a/parts/account/login.jade
+++ b/parts/account/login.jade
@@ -11,13 +11,13 @@ template(name='login')
                 .ui.inline.small.header 
                     i.user.outline.icon
                     |username
-                .ui.fluid.large.input(class=login_class)
+                .ui.fluid.large.input(class=input_login_class)
                     input.username(type='text')
                 .spacer
                 .ui.inline.small.header 
                     i.lock.icon
                     | password
-                .ui.fluid.large.input(class=login_class)
+                .ui.fluid.large.input(class=input_login_class)
                     input.password(type='password')
                 //- if username
                 if logging_in
